# bioinformatics_rust_book

./: ..nojekyll.icloud  ..travis 2.yml.icloud  .1_0_An_Introduction.html.icloud  .1_1_Definitions_and_Background.html.icloud  .1_2_Binary_vs_Library.html.icloud  .2_0_Ready_Go.html.icloud  .2_1_Add_Subtract_Multiply_Divide.html.icloud  .2_2_Semicolons.html.icloud  .2_3_Print_Numbers.html.icloud  .2_4_Comparing_Printing_Strings.html.icloud  .2_5_Level_Cleared.html.icloud  .3_0_Vectors.html.icloud  .3_1_Print_Vectors.html.icloud  .3_2_Dot_Notation.html.icloud  .Cargo 2.lock.icloud  .Cargo 2.toml.icloud  .Cargo 3.toml.icloud  .LICENSE 2.icloud  .README 2.md.icloud  .README 3.md.icloud  .ayu-highlight.css.icloud  .book 2.toml.icloud  .book 3.toml.icloud  .clipboard.min.js.icloud  .favicon.svg.icloud  .highlight.css.icloud  .highlight.js.icloud  .index.html.icloud  .print.html.icloud  .searchindex.js.icloud  .searchindex.json.icloud  .tomorrow-night.css.icloud  .travis 2.yml  .travis.yml  1_0_An_Introduction.html  1_1_Definitions_and_Background.html  1_2_Binary_vs_Library.html  2_0_Ready_Go.html  2_1_Add_Subtract_Multiply_Divide.html  2_2_Semicolons.html  (+17 more)
Chapter_1/: 1_2_Setup.html
Chapter_2/: 2_2_Print_Numbers.html  2_4_Level_Cleared.html
Chapter_3/: 3_1_Print_Vectors.html  3_2_Dot_Notation.html  3_3_Notes_On_Vectors.html
Chapter_4/: 4_2_Notes.html
Chapter_5/: 5_0_Characters.html  5_3_Integer_Overflow.html
Chapter_6/: 6_1_fasta.html  6_2_fastq.html  6_3_vcf.html  6_5_bam.html
Chapter_7/: 7_0_Iteration.html  7_2_Closures.html  7_4_Counting.html
Index/: Index.html  (+4 more)
(+853 files in other folders)
