[package]
name = "Bioinformatics_Rust_Book"
version = "0.0.1"
authors = ["Kana"]
edition = "2018"
description = "Bioinformatics in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
bioutils = "0.2.1"